dodati novi projekti, uredjivanje pocetne stranice i popravka filtera na stranici Projekti

--- a/about.html
+++ b/about.html
@@ -55,18 +55,23 @@
               <li><a href="project-details-default.html">Montažni objekti</a></li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="project-details-2.html">Hala - 3D arhitektura</a></li>
-                  <li><a href="project-details-3.html">Hala - 3D konstrukcija</a></li>
-                  <li><a href="project-details-1.html">Čelična nadstrešnica</a></li>
+                  <li><a href="3D-arhitektura-hale.html">Hala - 3D arhitektura</a></li>
+                  <li><a href="3D-konstrukcija-hale.html">Hala - 3D konstrukcija</a></li>
+                  <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
               <li><a href="project-details-default.html">Betonske konstrukcije</a></li>
               <li><a href="project-details-default.html">Sanacije i reparature</a></li>
-              <li><a href="project-details-default.html">3D vizuelizacija enterijera i eksterijera</a></li>
+              <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                <ul>
+                  <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
+                  <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
+                </ul>
+              </li>
             </ul>
           </li>
           <li><a href="about.html">O nama</a></li>
-          <li><a href="contact.html">Kontakt</a></li>
+          <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -529,7 +534,7 @@
           </div><!-- End footer links column-->
 
           <div class="col-lg-1 col-md-4 footer-links">
-            <strong><a href="contact.html">Kontakt</a></strong>
+            <strong><a href="kontakt.html">Kontakt</a></strong>
           </div><!-- End footer links column-->
 
         </div>
