--- a/dizajn-eksterijera.html
+++ b/dizajn-eksterijera.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>VB Inženjering - 3D konstrukcija hale</title>
+    <title>VB Inženjering - 3D dizajn eksterijera</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -54,18 +54,23 @@
                         <li><a href="project-details-default.html">Montažni objekti</a></li>
                         <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                             <ul>
-                                <li><a href="project-details-2.html">Hala - 3D arhitektura</a></li>
-                                <li><a href="project-details-3.html">Hala - 3D konstrukcija</a></li>
-                                <li><a href="project-details-1.html">Čelična nadstrešnica</a></li>
+                                <li><a href="3D-arhitektura-hale.html">Hala - 3D arhitektura</a></li>
+                                <li><a href="3D-konstrukcija-hale.html">Hala - 3D konstrukcija</a></li>
+                                <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                             </ul>
                         </li>
                         <li><a href="project-details-default.html">Betonske konstrukcije</a></li>
                         <li><a href="project-details-default.html">Sanacije i reparature</a></li>
-                        <li><a href="project-details-default.html">3D vizuelizacija enterijera i eksterijera</a></li>
+                        <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                            <ul>
+                                <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
+                                <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="about.html">O nama</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav><!-- .navbar -->
 
@@ -78,10 +83,11 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-            <h2>3D konstrukcija hale</h2>
+            <h2>Eksterijeri</h2>
             <ol>
                 <li><a href="index.html">Početna stranica</a></li>
-                <li>Detalji projekta</li>
+                <li><a href="projects.html">Projekti</a></li>
+                <li>Eksterijeri</li>
             </ol>
 
         </div>
@@ -96,27 +102,10 @@
                     <div class="swiper-wrapper align-items-center">
 
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" alt="">
+                            <img src="assets/img/projects/eksterijeri/1.jpeg" alt="3D vizuelizacija vikendice brvnara u obliku slova A sa velikim prozorima usred snežnog pejzaža u sumrak.">
                         </div>
-
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/hala2/FB_IMG_1738919766609.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala2/FB_IMG_1738919770933.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala2/FB_IMG_1738919773109.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala2/FB_IMG_1738919775420.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala2/FB_IMG_1738919777375.jpg" alt="">
+                            <img src="assets/img/projects/eksterijeri/2.jpeg" alt="">
                         </div>
 
                     </div>
@@ -131,21 +120,13 @@
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>This is an example of portfolio detail</h2>
+                        <h2>Vikendica</h2>
                         <p>
                             Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
                         </p>
                         <p>
                             Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
                         </p>
-
-                        <p>
-                            Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-
-                        <p>
-                            Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
-                        </p>
-
                     </div>
                 </div>
 
@@ -153,7 +134,7 @@
                     <div class="portfolio-info">
                         <h3>Informacije</h3>
                         <ul>
-                            <li><strong>Kategorija</strong> <span>Čelične konstrukcije</span></li>
+                            <li><strong>Kategorija</strong> <span>3D vizuelizacija</span></li>
                             <li><strong>Izrađeno</strong> <span>2025.</span></li>
                         </ul>
                     </div>
@@ -196,7 +177,7 @@
                 </div><!-- End footer links column-->
 
                 <div class="col-lg-1 col-md-4 footer-links">
-                    <strong><a href="contact.html">Kontakt</a></strong>
+                    <strong><a href="kontakt.html">Kontakt</a></strong>
                 </div><!-- End footer links column-->
 
             </div>
