--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>VB Inženjering</title>
-  <meta content="" name="description">
+  <title>VB Inženjering | Građevinska firma </title>
+  <meta content="Firma za građevinske projekte u Beogradu i Srbiji. Nudimo sve od arhitektonskog projektovanja i izrade konstrukcija, do izvođenja rad i 3D vizualizacija. Pogledajte naš portfolio i kontaktirajte nas." name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -29,7 +29,20 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+
 </head>
+
+<style>
+  .inner-shadow {
+    background-color: #E5E5E5;
+    border-radius: 20px; /* Zaobljeni uglovi */
+    box-shadow:
+            inset 0px -30px 50px rgba(255, 255, 255, 0.7),
+            inset 0px 30px 50px rgba(13, 39, 80, 0.16);
+  }
+
+</style>
+
 
 <body>
   <!-- ======= Header ======= -->
@@ -52,18 +65,23 @@
               <li><a href="project-details-default.html">Montažni objekti</a></li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="project-details-2.html">Hala - 3D arhitektura</a></li>
-                  <li><a href="project-details-3.html">Hala - 3D konstrukcija</a></li>
-                  <li><a href="project-details-1.html">Čelična nadstrešnica</a></li>
+                  <li><a href="3D-arhitektura-hale.html">Hala - 3D arhitektura</a></li>
+                  <li><a href="3D-konstrukcija-hale.html">Hala - 3D konstrukcija</a></li>
+                  <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
               <li><a href="project-details-default.html">Betonske konstrukcije</a></li>
               <li><a href="project-details-default.html">Sanacije i reparature</a></li>
-              <li><a href="project-details-default.html">3D vizuelizacija enterijera i eksterijera</a></li>
+              <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                <ul>
+                  <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
+                  <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
+                </ul>
+              </li>
             </ul>
           </li>
           <li><a href="about.html">O nama</a></li>
-          <li><a href="contact.html">Kontakt</a></li>
+          <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -77,9 +95,13 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2 data-aos="fade-down"><span>VB Inženjering d.o.o</span></h2>
-            <p data-aos="fade-up">Dobrodošli na web sajt naše firme</p>
-            <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">Sarađujte sa nama</a>
+            <h1 data-aos="fade-down" style="font-size: 6vh; font-weight: 700; color: #ffffff; margin-bottom: 10px;">
+              VB <span style="color: var(--color-primary);">Inženjering</span> d.o.o
+            </h1>
+            <h2 data-aos="fade-up" style="font-size: 4vh; font-weight: 400; color: #f1f1f1; letter-spacing: 1px;">
+              Građevinska rešenja budućnosti
+            </h2>
+            <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">Sarađujte sa nama <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
@@ -88,8 +110,8 @@
     <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
       <div class="carousel-item active" style="background-image: url(assets/img/hero-carousel/hero-carousel-1.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/projects/enterijeri/apartman/2.jpeg)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-2.jpg)"></div>
-      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-3.jpg)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-5.jpg)"></div>
 
       <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
@@ -250,7 +272,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item  position-relative">
+            <div class="service-item  position-relative inner-shadow">
               <div class="icon">
                 <i class="fa-solid fa-mountain-city"></i>
               </div>
@@ -261,7 +283,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item position-relative">
+            <div class="service-item position-relative inner-shadow">
               <div class="icon">
                 <i class="fa-solid fa-hammer"></i>
               </div>
@@ -272,7 +294,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item position-relative">
+            <div class="service-item position-relative inner-shadow">
               <div class="icon">
                 <i class="fa-solid fa-compass-drafting"></i>
               </div>
@@ -283,7 +305,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="service-item position-relative">
+            <div class="service-item position-relative inner-shadow">
               <div class="icon">
                 <i class="fa-solid fa-sack-dollar"></i>
               </div>
@@ -294,13 +316,13 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
-            <div class="service-item position-relative">
+            <div class="service-item position-relative" style="background-color: transparent;">
               <img src="assets/img/logo/logoDesign.png" style="width: 80%; height: 85%; margin-left: 10%; margin-top:10%; ">
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
-            <div class="service-item position-relative">
+            <div class="service-item position-relative inner-shadow">
               <div class="icon">
                 <i class="fa-solid fa-cubes"></i>
               </div>
@@ -311,7 +333,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
-            <div class="service-item position-relative">
+            <div class="service-item position-relative inner-shadow">
               <div class="icon">
                 <i class="fa-solid fa-hammer"></i>
               </div>
@@ -322,7 +344,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
-            <div class="service-item position-relative">
+            <div class="service-item position-relative inner-shadow">
               <div class="icon">
                 <i class="fa-solid fa-helmet-safety"></i>
               </div>
@@ -333,7 +355,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
-            <div class="service-item position-relative">
+            <div class="service-item position-relative inner-shadow">
               <div class="icon">
                 <i class="fa-solid fa-cart-shopping"></i>
               </div>
@@ -354,76 +376,33 @@
 
         <div class="section-header">
           <h2>Najnoviji projekti</h2>
-          <p>Upoznajte se sa našim radovima kroz izvedene projekte i uverite se u posvećenost koju ulažemo u svaki detalj. Filtrirajte projekte po tipu da pronađete ono što vas najviše zanima ili pregledajte sve dosadašnje: </p>
+          <p>Upoznajte se sa našim radovima kroz izvedene projekte i uverite se u posvećenost koju ulažemo u svaki detalj. Pregledajte sve dosadašnje projekte: </p>
           <br><a href="projects.html">SVI PROJEKTI</a>
         </div>
+        <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
+                      <div class="portfolio-content h-100">
+                        <img src="assets/img/projects/hala1/4.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-info">
+                          <h4>Hala 1</h4>
+                          <p>3D arhitektura hale</p>
+                          <a href="assets/img/projects/hala1/4.jpg" title="3D arhitektura hale" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                          <a href="3D-arhitektura-hale.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                        </div>
+                      </div>
+                    </div><!-- End Projects Item -->
 
-
-        <div class="portfolio-isotope" data-portfolio-filter=".filter-celik" data-portfolio-layout="masonry" data-portfolio-sort="original-order">
-          <ul class="portfolio-flters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter=".filter-celik" class="filter-active">Čelične konstrukcije</li>
-            <li data-filter=".filter-beton">Betonske konstrukcije</li>
-            <li data-filter=".filter-montazni">Montažni objekti</li>
-            <li data-filter=".filter-sanacije">Sanacije i reparature</li>
-            <li data-filter=".filter-vizualizacije">3D vizuelizacije</li>
-          </ul><!-- End Projects Filters -->
-          <br>
-          <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/hala1/4.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Hala 1</h4>
-                  <p>3D arhitektura hale</p>
-                  <a href="assets/img/projects/hala1/4.jpg" title="3D arhitektura hale" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details-2.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/nadstresnica/4.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Nadstrešnica</h4>
-                  <p>Konstrukcijsko rešenje nadstrešnice</p>
-                  <a href="assets/img/projects/nadstresnica/4.png" title="Nadstrešnica" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details-1.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Hala 2</h4>
-                  <p>3D konstrukcija hale</p>
-                  <a href="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" title="3D konstrukcija hale" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details-3.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-beton">
-              <p>Novi projekti su u toku...</p>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-montazni">
-              <p>Novi projekti su u toku...</p>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-sanacije">
-              <p>Novi projekti su u toku...</p>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-vizualizacije">
-              <p>Novi projekti su u toku...</p>
-            </div><!-- End Projects Item -->
-
-          </div><!-- End Projects Container -->
-
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-vizualizacije">
+                      <div class="portfolio-content h-100">
+                        <img src="assets/img/projects/enterijeri/ordinacija/1.jpeg" class="img-fluid" alt="">
+                        <div class="portfolio-info">
+                          <h4>Zubarska ordinacija</h4>
+                          <p>Enterijer zubarske ordinacije</p>
+                          <a href="assets/img/projects/enterijeri/ordinacija/1.jpeg" title="Enterijer zubarske ordinacije" data-gallery="portfolio-gallery-vizuelizacije" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                          <a href="dizajn-enterijera.html#project-details-1" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                        </div>
+                      </div>
+                    </div><!-- End Projects Item -->
         </div>
 
       </div>
@@ -852,7 +831,7 @@
           </div><!-- End footer links column-->
 
           <div class="col-lg-1 col-md-4 footer-links">
-            <strong><a href="contact.html">Kontakt</a></strong>
+            <strong><a href="kontakt.html">Kontakt</a></strong>
           </div><!-- End footer links column-->
 
         </div>
@@ -890,6 +869,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/dropdown.js"></script>
+
 
 </body>
 
