--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>VB Inženjering - Usluge</title>
-  <meta content="" name="description">
+  <meta content="Otkrijte naš kompletan spektar građevinskih usluga. Od idejnog arhitektonskog projektovanja, preko izvođenja radova i tehničkog nadzora, do prodaje visokokvalitetnih hidroizolacionih materijala. Rešenja po meri za vaš projekat." name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -67,18 +67,23 @@
               <li><a href="project-details-default.html">Montažni objekti</a></li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="project-details-2.html">Hala - 3D arhitektura</a></li>
-                  <li><a href="project-details-3.html">Hala - 3D konstrukcija</a></li>
-                  <li><a href="project-details-1.html">Čelična nadstrešnica</a></li>
+                  <li><a href="3D-arhitektura-hale.html">Hala - 3D arhitektura</a></li>
+                  <li><a href="3D-konstrukcija-hale.html">Hala - 3D konstrukcija</a></li>
+                  <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
               <li><a href="project-details-default.html">Betonske konstrukcije</a></li>
               <li><a href="project-details-default.html">Sanacije i reparature</a></li>
-              <li><a href="project-details-default.html">3D vizuelizacija enterijera i eksterijera</a></li>
+              <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                <ul>
+                  <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
+                  <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
+                </ul>
+              </li>
             </ul>
           </li>
           <li><a href="about.html">O nama</a></li>
-          <li><a href="contact.html">Kontakt</a></li>
+          <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -172,7 +177,35 @@
           </div>
 
           <div id="vizuelizacija" class="mt-5">
-            <img src="assets/img/services/visualization.png" alt="" class="img-fluid services-img">
+<!--            <img src="assets/img/services/visualization.png" alt="" class="img-fluid services-img">-->
+            <div class="position-relative h-100">
+              <div class="slides-1 portfolio-details-slider swiper">
+                <div class="swiper-wrapper align-items-center">
+
+                  <div class="swiper-slide">
+                    <img class="slider-img" src="assets/img/services/vizuelizacija/ordinacija1.jpeg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img class="slider-img" src="assets/img/services/vizuelizacija/eksterijer1.jpeg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img class="slider-img" src="assets/img/services/vizuelizacija/enterijer1.jpeg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img class="slider-img" src="assets/img/services/visualization.png" alt="">
+                  </div>
+
+                </div>
+
+                <div class="swiper-pagination"></div>
+              </div>
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+            </div>
+            <br>
             <h3>3D vizuelizacija</h3>
             <p>
               Koristeći napredne tehnologije, kreiramo detaljne 3D vizualizacije koje investitorima i izvođačima pružaju kristalno jasnu predstavu o finalnom izgledu projekta.
@@ -287,7 +320,7 @@
           </div><!-- End footer links column-->
 
           <div class="col-lg-1 col-md-4 footer-links">
-            <strong><a href="contact.html">Kontakt</a></strong>
+            <strong><a href="kontakt.html">Kontakt</a></strong>
           </div><!-- End footer links column-->
 
         </div>
