--- a/3D-konstrukcija-hale.html
+++ b/3D-konstrukcija-hale.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>VB Inženjering - Radovi su u toku</title>
+    <title>VB Inženjering - 3D konstrukcija hale</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -82,9 +82,10 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-            <h2>Projekti su u toku</h2>
+            <h2>3D konstrukcija hale</h2>
             <ol>
                 <li><a href="index.html">Početna stranica</a></li>
+                <<li><a href="projects.html">Projekti</a></li>
                 <li>Detalji projekta</li>
             </ol>
 
@@ -95,15 +96,71 @@
     <section id="project-details" class="project-details">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-            <img style="display:block; margin-left: auto; margin-right: auto; width: 50%;" src="assets/img/workInProgress.png" alt="">
+            <div class="position-relative h-100">
+                <div class="slides-1 portfolio-details-slider swiper">
+                    <div class="swiper-wrapper align-items-center">
+
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/hala2/FB_IMG_1738919766609.jpg" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/hala2/FB_IMG_1738919770933.jpg" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/hala2/FB_IMG_1738919773109.jpg" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/hala2/FB_IMG_1738919775420.jpg" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/hala2/FB_IMG_1738919777375.jpg" alt="">
+                        </div>
+
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+            </div>
 
             <div class="row justify-content-between gy-4 mt-4">
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>Radovi su u toku...</h2>
-                        <p>Posvećeni smo realizaciji novih objekata i usluga, a završene projekte ćemo uskoro predstaviti javnosti.</p>
-                        <p>Posetite nas ponovo kako biste prvi videli kako naše ideje postaju budućnost!</p>
+                        <h2>This is an example of portfolio detail</h2>
+                        <p>
+                            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                        </p>
+                        <p>
+                            Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                        </p>
+
+                        <p>
+                            Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
+
+                        <p>
+                            Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
+                        </p>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="portfolio-info">
+                        <h3>Informacije</h3>
+                        <ul>
+                            <li><strong>Kategorija</strong> <span>Čelične konstrukcije</span></li>
+                            <li><strong>Izrađeno</strong> <span>2025.</span></li>
+                        </ul>
                     </div>
                 </div>
 
