--- a/kontakt.html
+++ b/kontakt.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>VB Inženjering - Projekat nadstrešnice</title>
-  <meta content="" name="description">
+  <title>VB Inženjering - Kontakt</title>
+  <meta content="Imate pitanja ili želite dogovoriti izradu projekta? Kontaktirajte nas putem e-maila ili telefona ili popunite formu. Stojimo vam na raspolaganju za sve konsultacije." name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -29,8 +29,24 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-
 </head>
+
+<style>
+  .map-responsive {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 56.25%; /* omjer 16:9 */
+    height: 0;
+  }
+  .map-responsive iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+</style>
 
 <body>
 
@@ -54,18 +70,23 @@
               <li><a href="project-details-default.html">Montažni objekti</a></li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="project-details-2.html">Hala - 3D arhitektura</a></li>
-                  <li><a href="project-details-3.html">Hala - 3D konstrukcija</a></li>
-                  <li><a href="project-details-1.html">Čelična nadstrešnica</a></li>
+                  <li><a href="3D-arhitektura-hale.html">Hala - 3D arhitektura</a></li>
+                  <li><a href="3D-konstrukcija-hale.html">Hala - 3D konstrukcija</a></li>
+                  <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
               <li><a href="project-details-default.html">Betonske konstrukcije</a></li>
               <li><a href="project-details-default.html">Sanacije i reparature</a></li>
-              <li><a href="project-details-default.html">3D vizuelizacija enterijera i eksterijera</a></li>
+              <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                <ul>
+                  <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
+                  <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
+                </ul>
+              </li>
             </ul>
           </li>
           <li><a href="about.html">O nama</a></li>
-          <li><a href="contact.html">Kontakt</a></li>
+          <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -78,99 +99,89 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-        <h2>Projekat nadstrešnice</h2>
+        <h2>Kontaktirajte nas</h2>
         <ol>
           <li><a href="index.html">Početna stranica</a></li>
-          <li>Detalji projekta</li>
+          <li>Kontakt</li>
         </ol>
 
       </div>
     </div><!-- End Breadcrumbs -->
 
-    <!-- ======= Projet Details Section ======= -->
-    <section id="project-details" class="project-details">
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="position-relative h-100">
-          <div class="slides-1 portfolio-details-slider swiper">
-            <div class="swiper-wrapper align-items-center">
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/nadstresnica/1.png" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/nadstresnica/2.png" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/nadstresnica/3.png" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/nadstresnica/4.png" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/nadstresnica/5.png" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/nadstresnica/6.png" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/nadstresnica/7.png" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/nadstresnica/8.png" alt="">
-              </div>
-
+        <div class="row gy-4">
+          <div class="col-lg-6">
+            <div class="info-item  d-flex flex-column justify-content-center align-items-center">
+              <i class="bi bi-map"></i>
+              <h3>Naša adresa</h3>
+              <p>Beograd</p>
             </div>
-            <div class="swiper-pagination"></div>
-          </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
+          </div><!-- End Info Item -->
+
+          <div class="col-lg-3 col-md-6">
+            <div class="info-item d-flex flex-column justify-content-center align-items-center">
+              <i class="bi bi-envelope"></i>
+              <h3>Naš e-mail</h3>
+              <p>info.vbinzenjering@gmail.com</p>
+            </div>
+          </div><!-- End Info Item -->
+
+          <div class="col-lg-3 col-md-6">
+            <div class="info-item  d-flex flex-column justify-content-center align-items-center">
+              <i class="bi bi-telephone"></i>
+              <h3>Pozovite nas</h3>
+              <p>064/217-5474</p>
+            </div>
+          </div><!-- End Info Item -->
 
         </div>
 
-        <div class="row justify-content-between gy-4 mt-4">
+        <div class="row gy-4 mt-1">
 
-          <div class="col-lg-8">
-            <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-              <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
-              </p>
-
-              <p>
-                Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-
-              <p>
-                Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
-              </p>
-
+          <div class="col-lg-6 ">
+            <div class="map-responsive">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d175714.7891158713!2d20.422468199999997!3d44.81534404999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7aa3d7b53fbd%3A0x1db8645cf2177ee4!2z0JHQtdC-0LPRgNCw0LQsINCh0YDQsdC40ZjQsA!5e1!3m2!1ssr!2sba!4v1754134501795!5m2!1ssr!2sba"
+                      allowfullscreen=""
+                      loading="lazy"
+                      referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
             </div>
-          </div>
+          </div><!-- End Google Maps -->
 
-          <div class="col-lg-3">
-            <div class="portfolio-info">
-              <h3>Informacije</h3>
-              <ul>
-                <li><strong>Kategorija</strong> <span>Čelične konstrukcije</span></li>
-                <li><strong>Izrađeno</strong> <span>2025.</span></li>
-              </ul>
-            </div>
-          </div>
+          <div class="col-lg-6">
+           <!-- <form action="#" method="post" role="form" class="php-email-form"> -->
+            <form action="#" method="post" role="form" class="php-email-form">
+              <p>Imate građevinske radove u planu? Pošaljite nam poruku i dogovorićemo se.</p>
+              <div class="row gy-4">
+                <div class="col-lg-6 form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Vaše ime i prezime*" required>
+                </div>
+                <div class="col-lg-6 form-group">
+                  <input type="text" class="form-control" name="phone" id="phone" placeholder="Vaš broj telefona*" required>
+                </div>
+              </div>
+              <div class="form-group">
+                <input type="email" class="form-control" name="email" id="email" placeholder="Vaša e-mail adresa*" required>
+              </div>
+              <div class="form-group">
+                <textarea class="form-control" name="message" rows="6" placeholder="Poruka*" required></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Sačekajte...</div>
+                <div class="error-message">Greška! Popunite sva polja i pokušajte ponovo.</div>
+                <div class="sent-message">Poruka je uspješno poslata! Hvala na interesovanju.</div>
+              </div>
+              <div class="text-center"><button type="submit">Pošalji</button></div>
+            </form>
+          </div><!-- End Contact Form -->
 
         </div>
 
       </div>
-    </section><!-- End Projet Details Section -->
+    </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
@@ -204,7 +215,7 @@
           </div><!-- End footer links column-->
 
           <div class="col-lg-1 col-md-4 footer-links">
-            <strong><a href="contact.html">Kontakt</a></strong>
+            <strong><a href="kontakt.html">Kontakt</a></strong>
           </div><!-- End footer links column-->
 
         </div>
@@ -241,6 +252,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
   <script src="assets/js/dropdown.js"></script>
 
 </body>
