--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>VB Inženjering - Projekti</title>
-  <meta content="" name="description">
+  <meta content=""Istražite naš portfolio završenih građevinskih projekata. Pogledajte naše radove u kategorijama čeličnih i betonskih konstrukcija, sanacija i montažnih objekata, te 3D vizualizacija. Uverite se u kvalitet i stručnost." name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -53,18 +53,22 @@
               <li><a href="project-details-default.html">Montažni objekti</a></li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="project-details-2.html">Hala - 3D arhitektura</a></li>
-                  <li><a href="project-details-3.html">Hala - 3D konstrukcija</a></li>
-                  <li><a href="project-details-1.html">Čelična nadstrešnica</a></li>
+                  <li><a href="3D-arhitektura-hale.html">Hala - 3D arhitektura</a></li>
+                  <li><a href="3D-konstrukcija-hale.html">Hala - 3D konstrukcija</a></li>
+                  <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
               <li><a href="project-details-default.html">Betonske konstrukcije</a></li>
               <li><a href="project-details-default.html">Sanacije i reparature</a></li>
-              <li><a href="project-details-default.html">3D vizuelizacija enterijera i eksterijera</a></li>
-            </ul>
+              <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                <ul>
+                  <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
+                  <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
+                </ul>
+              </li>            </ul>
           </li>
           <li><a href="about.html">O nama</a></li>
-          <li><a href="contact.html">Kontakt</a></li>
+          <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -90,16 +94,17 @@
     <section id="projects" class="projects">
       <div class="container" data-aos="fade-up">
 
-        <div class="portfolio-isotope" data-portfolio-filter=".filter-celik" data-portfolio-layout="masonry" data-portfolio-sort="original-order">
+        <div class="portfolio-isotope" data-portfolio-filter="*" data-portfolio-layout="masonry" data-portfolio-sort="original-order">
 
           <ul class="portfolio-flters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter=".filter-celik" class="filter-active">Svi projekti</li>
-            <li data-filter=".filter-celik">Čelične konstrukcije</li>
-            <li data-filter=".filter-beton">Betonske konstrukcije</li>
-            <li data-filter=".filter-montazni">Montažni objekti</li>
-            <li data-filter=".filter-sanacije">Sanacije i reparature</li>
-            <li data-filter=".filter-vizualizacije">3D vizualizacije</li>
+            <li data-filter="celik-vizualizacije" class="filter-active" >Svi projekti</li>
+            <li data-filter=".filter-celik" class="portfolio-item filter-celik">Čelične konstrukcije</li>
+            <li data-filter=".filter-beton" class="portfolio-item filter-beton">Betonske konstrukcije</li>
+            <li data-filter=".filter-montazni" class="portfolio-item filer-montazni">Montažni objekti</li>
+            <li data-filter=".filter-sanacije" class="portfolio-item filer-sanacije">Sanacije i reparature</li>
+            <li data-filter=".filter-vizualizacije" class="portfolio-item filer-vizuelizacije">3D vizualizacije</li>
           </ul><!-- End Projects Filters -->
+          <br>
 
           <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
@@ -110,7 +115,7 @@
                   <h4>Nadstrešnica</h4>
                   <p>Konstrukcijsko rešenje nadstrešnice</p>
                   <a href="assets/img/projects/nadstresnica/4.png" title="Nadstrešnica" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details-1.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="celicna-nadstresnica.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
@@ -122,7 +127,7 @@
                   <h4>Hala 1</h4>
                   <p>3D arhitektura hale</p>
                   <a href="assets/img/projects/hala1/4.jpg" title="3D arhitektura hale" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details-2.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="3D-arhitektura-hale.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
@@ -134,7 +139,7 @@
                   <h4>Hala 2</h4>
                   <p>3D konstrukcija hale</p>
                   <a href="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" title="3D konstrukcija hale" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details-3.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="3D-konstrukcija-hale.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
@@ -152,7 +157,39 @@
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-vizualizacije">
-              <p>Novi projekti su u toku...</p>
+              <div class="portfolio-content h-100">
+                <img src="assets/img/projects/eksterijeri/1.jpeg" class="img-fluid" alt="3D vizuelizacija vikendice brvnara u obliku slova A sa velikim prozorima usred snežnog pejzaža u sumrak.">
+                <div class="portfolio-info">
+                  <h4>Vikendica</h4>
+                  <p>Eksterijer stambenog objekta</p>
+                  <a href="assets/img/projects/eksterijeri/1.jpeg" title="Eksterijer vikendice" data-gallery="portfolio-gallery-vizuelizacije" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="dizajn-eksterijera.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Projects Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-vizualizacije">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/projects/enterijeri/apartman/1.jpeg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Apartman</h4>
+                  <p>Enterijer stambenog objekta</p>
+                  <a href="assets/img/projects/enterijeri/apartman/1.jpeg" title="Enterijer apartmana" data-gallery="portfolio-gallery-vizuelizacije" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="dizajn-enterijera.html#project-details-2" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Projects Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-vizualizacije">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/projects/enterijeri/ordinacija/1.jpeg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Zubarska ordinacija</h4>
+                  <p>Enterijer zubarske ordinacije</p>
+                  <a href="assets/img/projects/enterijeri/ordinacija/1.jpeg" title="Enterijer zubarske ordinacije" data-gallery="portfolio-gallery-vizuelizacije" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="dizajn-enterijera.html#project-details-1" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
             </div><!-- End Projects Item -->
 
           </div><!-- End Projects Container -->
@@ -194,7 +231,7 @@
           </div><!-- End footer links column-->
 
           <div class="col-lg-1 col-md-4 footer-links">
-            <strong><a href="contact.html">Kontakt</a></strong>
+            <strong><a href="kontakt.html">Kontakt</a></strong>
           </div><!-- End footer links column-->
 
         </div>
