--- a/service-details.html
+++ b/service-details.html
@@ -67,7 +67,7 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="kontakt.html">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
